apps/gitea/gitea-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: gitea
    labels:
      apps.gitops: gitea
      prometheus: scrape
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: gitea
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gitea
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - env:
        - name: DB_PASSWD
          valueFrom:
            secretKeyRef:
              key: password
              name: gitea.gitea-gitea.credentials.postgresql.acid.zalan.do
        image: gitea/gitea:latest
        imagePullPolicy: Always
        name: gitea
        ports:
        - containerPort: 3000
          name: gitea-http
          protocol: TCP
        - containerPort: 22
          name: git-ssh
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: git-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: git-data
        persistentVolumeClaim:
          claimName: gitea-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: gitea
spec:
  ports:
  - name: gitea-http
    port: 3000
    protocol: TCP
    targetPort: gitea-http
  selector:
    app: gitea
  sessionAffinity: None
  type: ClusterIP
...
